@@ -1,7 +1,7 @@
 // mcpython config file
 VERSION=1.0.0
 PROVIDING_MOD=minecraft
-PROVIDING_MOD_VERSION=(0, 2, 1, 2)
+PROVIDING_MOD_VERSION=(0, 2, 1, 3)
 
 D{
 physics -> {
