@@ -176,3 +176,4 @@ issue 188: minecraft version tuple could contain strings; fixed on 19.05.2020 by
 issue 189: data packs were not unloaded on world unload; fixed on 19.05.2020 by uuk
 issue 190: config system was not parsing the data correctly; fixed on 19.05.2020 by uuk
 issue 191: slab textures were upside down; fixed on 20.05.2020 by uuk
+issue 192: AdvancedBlockFactory was failing in some cases; fixed on 20.05.2020 by uuk
