@@ -144,4 +144,4 @@ issue 181:
 issue 185:
     bug: in big worlds, chunks can get randomly hidden
 
-[186-191]
+[186-192]
