@@ -94,6 +94,10 @@ class ModelHandler:
             logger.write_exception("error during loading model '{}' named '{}'".format(location, name))
 
     def add_face_to_batch(self, block, face, batches) -> list:
+        if block.NAME not in self.blockstates:
+            logger.println("[FATAL] block data for block '{}' not found!".format(block.NAME))
+            print("possible:", self.blockstates.keys())
+            return []
         blockstate = self.blockstates[block.NAME]
         # todo: add custom block renderer check
         if blockstate is None:
@@ -101,6 +105,10 @@ class ModelHandler:
         return blockstate.add_face_to_batch(block, batches, face)
 
     def draw_face(self, block, face):
+        if block.NAME not in self.blockstates:
+            logger.println("[FATAL] block data for block '{}' not found!".format(block.NAME))
+            print("possible:", self.blockstates.keys())
+            return []
         blockstate = self.blockstates[block.NAME]
         # todo: add custom block renderer check
         if blockstate is None:
